# MusicPlayer

./: .gitignore  AudioInfo.cpp  AudioInfo.h  AudioSearchModel.cpp  AudioSearchModel.h  CMakeCache.txt  CMakeLists.txt  README.md  app.js  app_qmltyperegistrations.cpp  cmake_install.cmake  main.cpp  playerController.cpp  playerController.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_app.cmake  Qt6_QmlPlugins_Imports_app.rsp
.rcc/: qmake_SongPlayer.qrc  qrc_app_raw_qml_0.cpp  qrc_qmake_SongPlayer.cpp
.rcc/qmlcache/: app_qml_loader_file_list.rsp  app_qmlcache_loader.cpp
.rcc/qmlcache/app_customModules/: AudioInfoBox_qml.cpp  ImageButton_qml.cpp  Main_qml.cpp  PlayListPanel_qml.cpp  SearchField_qml.cpp  SearchPanel_qml.cpp
.rcc/qmllint/: app.rsp  app_json.rsp  app_module.rsp
customModules/: AudioInfoBox.qml  Main.qml  PlayListPanel.qml  SearchField.qml  SearchPanel.qml
